<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        style="@style/AppTheme.AppBarOverlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:paddingStart="6dp"
            android:paddingEnd="16dp"
            app:contentInsetStartWithNavigation="0dp"
            app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:drawable/divider_horizontal_textfield"
                android:orientation="vertical"
                android:padding="15dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/themes_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/themes"
                    android:textSize="24sp"
                    tools:text="Themes" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="25dp">

                        <TextView
                            android:id="@+id/theme"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/dark_theme"
                            tools:text="Dark Theme" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/theme_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:drawable/divider_horizontal_textfield"
                android:orientation="vertical"
                android:padding="15dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/playback_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playback"
                    android:textSize="24sp"
                    tools:text="@string/playback" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="25dp">

                        <TextView
                            android:id="@+id/volume"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.15"
                            android:text="@string/playback_volume"
                            tools:text="Volume" />

                        <TextView
                            android:id="@+id/volume_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1"
                            android:textAlignment="textEnd"
                            tools:text="40" />

                        <SeekBar
                            android:id="@+id/volume_seekbar"
                            style="@style/Widget.AppCompat.SeekBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.75"
                            android:indeterminate="false"
                            android:progressDrawable="@drawable/seek_bar_bg"
                            android:scrollbarSize="@dimen/seek_bar_thickness"
                            android:thumb="@drawable/seek_thumb_bg" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:drawable/divider_horizontal_textfield"
                android:orientation="vertical"
                android:padding="15dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/visualizations_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visualizations"
                    android:textSize="24sp"
                    tools:text="Visualization" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="25dp">

                        <TextView
                            android:id="@+id/visualization_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/visualization_type"
                            tools:text="Visualization Type" />

                        <Spinner
                            android:id="@+id/visualization_type_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:popupBackground="?themePopupBackground" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>