<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".presentation.activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?themeColorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@android:style/Animation.Translucent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:id="@+id/playlist_toolbar_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"

                    app:layout_collapseMode="parallax" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/love_music"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/backdrop_title"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/backdrop_subtitle"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="@dimen/backdrop_subtitle"
                        android:textStyle="italic" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/buttonAddPlaylist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_library_add_white_24dp"
                        android:text="@string/add_playlist"
                        app:backgroundTint="?themeColorAccent" />
                </LinearLayout>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/empty_playlists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <View
                android:id="@+id/view7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical"
                android:weightSum="1">

                <View
                    android:id="@+id/view12"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <View
                            android:id="@+id/view9"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.35" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:adjustViewBounds="true"
                            android:tint="?themeTextColorSecondary"
                            app:srcCompat="@drawable/ic_library_music_black_24dp" />

                        <View
                            android:id="@+id/view10"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.35" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/empty_playlists_title"
                        android:textAlignment="center"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/empty_playlists"
                        android:textAlignment="center"
                        android:textColor="?themeTextColorSecondary"
                        android:textSize="18sp" />

                </LinearLayout>

                <View
                    android:id="@+id/view13"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4" />

            </LinearLayout>

            <View
                android:id="@+id/view8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/content_playlist" />
        </FrameLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>